--- a/views/pages/setup.ejs
+++ b/views/pages/setup.ejs
@@ -36,7 +36,7 @@
 				return;
 			}
 			for(let i = 0; i < num; i++){
-				questions.push({
+				model.questions.push({
 					number: i + 1
 				});
 			}
