--- a/views/pages/setup.ejs
+++ b/views/pages/setup.ejs
@@ -74,6 +74,12 @@
 				}
 			});
 		});
+	
+		list.on('click' 'li', function(e) {
+			const li = $(e.target);
+			$('li.active').removeClass('active');
+			li.addClass('active');
+		});
 	});
 </script>
 <%- /* Expose server-rendered data as window.SAILS_LOCALS :: */ exposeLocalsToBrowser() %>
