--- a/views/pages/setup.ejs
+++ b/views/pages/setup.ejs
@@ -75,7 +75,7 @@
 			});
 		});
 	
-		list.on('click' 'li', function(e) {
+		list.on('click', 'li', function(e) {
 			const li = $(e.target);
 			$('li.active').removeClass('active');
 			li.addClass('active');
