--- a/views/pages/setup.ejs
+++ b/views/pages/setup.ejs
@@ -8,23 +8,43 @@
   <input type="number" id="new-num" placeholder="Number of questions" />
   <button id='add'>Add</button>
 
+	<ul id='questions'>
+	  
+	</ul>
 </div>
 
 <script type="text/javascript">
 	$(() => {
 		const list = $('#list');
+		const questions = $('#questions');
+		const cources = [];
 
 		function renderBtn(item) {
 			const markup = `<li>
-				<div class='cource-item'>
-					<span class='name'>${item.name}</span> <span class='num'>(${item.questions.length})</span><button class='delete' data-id='${item.id}'>X</button>
+				<div class='cource-item' data-id='${item.id}'>
+					<span class='name'>${item.name}</span> <span class='num'>(${item.questions.length})</span><button class='delete'>X</button>
 				</div>
 			</li>`;
 			list.append(markup);
 		}
 
+		function renderQuestion(item) {
+			const markup = `<li>
+				<div class='question-item' data-id='${item.id}'>
+					<span class='number'>${item.number}</span>
+					<button class='set-val'>A</button>
+					<button class='set-val'>B</button>
+					<button class='set-val'>C</button>
+					<button class='set-val'>D</button>
+					<button class='set-val'>E</button>
+				</div>
+			</li>`;
+			questions.append(markup);
+		}
+
 		$.get('/api/cource')
 		.then((data) => {
+			cources = data;
 			data.forEach(renderBtn);
 		});
 
@@ -52,6 +72,7 @@
 				$.post('/api/question/createMany', {data: questions} )
 				.then((items) => {
 					item.questions = items;
+					cources.push(item);
 					renderBtn(item);
 				});
 			});
@@ -64,21 +85,30 @@
 				return;
 			}
 			
-			const id = btn.attr('data-id');
+			const id = btn.parent().attr('data-id');
 
 			$.ajax({
 				url: '/api/cource/' + id,
 				type: 'DELETE',
 				success: function(result) {
+					if (btn.parent().parent().is('.active')) {
+						questions.empty();
+					}
 					btn.parent().parent().remove();
+					const index = cources.findIndex(c => c.id === id);
+					cources.splice(index, 1);
 				}
 			});
 		});
 	
 		list.on('click', 'li', function(e) {
 			const li = $(e.target);
+			const id = btn.parent().attr('data-id');
 			$('li.active').removeClass('active');
 			li.addClass('active');
+			const cource = cources.find(c => c.id === id);
+			questions.empty();
+			cource.questions.forEach(renderQuestion);
 		});
 	});
 </script>
