--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,17 +1,20 @@
 body {
-	background: navajowhite;
+	background: #fff0db;
 }
 
 button.selected {
-	background: green;
+	background: #4ecdb5;
+	border: none;
 }
 
 button.wrong {
-	background: red;
+	background: #fc6289;
+	border: none;
 }
 
 button.unknown {
 	background: purple;
+	border: none;
 }
 
 li.active div {
@@ -21,6 +24,11 @@ li.active div {
 
 li {
 	cursor: pointer;
+	list-style: none;
+}
+
+ul {
+	list-style: none;
 }
 
 #questions li {
