--- a/views/pages/setup.ejs
+++ b/views/pages/setup.ejs
@@ -1,13 +1,15 @@
-<div id="setup" v-cloak>
+<div id="setup" class="content" v-cloak>
 
   <h1>Cources</h1>
+  <a href="/">Back</a>
   <ul id='list'>
 	  
   </ul>
-  <input type="text" id="new-name" placeholder="Name" />
-  <input type="number" id="new-num" placeholder="Number of questions" />
-  <button id='add'>Add</button>
-
+  <div class="new-vals">
+	<input type="text" id="new-name" placeholder="Name" /> <br/>
+	<input type="number" id="new-num" placeholder="Number of questions" /> <br />
+	<button id='add'>Add</button>
+	</div>
 	<ul id='questions'>
 	  
 	</ul>
@@ -118,19 +120,20 @@
 			const id = li.find('div').attr('data-id');
 			const old = li.find('.selected');
 			const answer = btn.text();
+			if (old.length) {
+				old.removeClass('selected');
+			}
+			btn.addClass('selected');
+			const question = cource.questions.find(c => c.id === id);
+			question.answer = answer;
 			$.ajax({
 				url: '/api/question/' + id,
 				data: {
 					answer: answer
 				},
-				type: 'PUT',
+				type: 'PATCH',
 				success: function(result) {
-					if(old.length) {
-						old.removeClass('selected');
-					}
-					btn.addClass('selected');
-					const question = cource.questions.find(c => c.id === id);
-					question.answer = answer;
+					
 				}
 			});
 		});
