--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -107,7 +107,6 @@ ul {
 	    display: block;
     text-align: center;
     font-size: 40px;
-    border-top: 1px solid #4c82a4;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	font-weight: bold;
@@ -115,6 +114,7 @@ ul {
 
 .question-item {
 	border-bottom: 1px solid #4c82a4;
+	border-top: 1px solid #4c82a4;
 	padding-bottom: 10px;
 	background: #c3d2f6;
 	text-align: center;
@@ -163,6 +163,25 @@ ul {
 	color: white;
 	box-shadow: 2px 3px 5px 0px rgba(0,0,0,0.46);
 	transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+#setup .question-item {
+	padding-top: 10px;
+
+}
+
+#setup .number {
+	border: none;
+	font-size: 24px;
+	display: inline;
+	margin-right: 10px;
+}
+
+#setup .set-val {
+	font-size: 16px;
+	margin: 3px;
+	padding: 5px 10px;
+	
 }
 
 #score-board {
