--- a/views/pages/setup.ejs
+++ b/views/pages/setup.ejs
@@ -13,6 +13,10 @@
 	<ul id='questions'>
 	  
 	</ul>
+
+	<ul>
+		<li><a href="/questions">Answer the questions</a></li>
+	</ul>
 </div>
 
 <script type="text/javascript">
