--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -197,3 +197,19 @@ ul {
 #score {
 	font-weight: bold;
 }
+
+.up-btn {
+	position: fixed;
+    right: 10px;
+    bottom: 10px;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    border: 1px solid lightgray;
+    box-shadow: 1px 1px 4px 2px rgba(0,0,0,0.4);
+    background: url(/images/arrow.png) white;
+    background-size: 29px;
+    background-repeat: no-repeat;
+	background-position: 6px 6px;
+	cursor: pointer;
+}
