--- a/views/pages/setup.ejs
+++ b/views/pages/setup.ejs
@@ -15,7 +15,7 @@
 	</ul>
 
 	<ul>
-		<li><a href="/questions">Answer the questions</a></li>
+		<li style="text-align: center;"><a href="/questions">Answer the questions</a></li>
 	</ul>
 </div>
 
